--- a/css/style.css
+++ b/css/style.css
@@ -42,4 +42,9 @@ header{
     background-image: url(../img/jumbo-bg.png) ;
     background-position: center;
     background-size: cover;
+    color: #fff;
+}
+
+.baner{
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
 }
