--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,7 @@
 
 /* utilities */
 
-section{
-    margin-top: 30px;
-    
-}
+
 /* to remove */
 
 [class*='col']{
@@ -35,7 +32,7 @@ header{
 .header-bottom{
     height: 80px;
 }
-/* jumbotron */
+/* jumbotron and baner */
 
 .jumbotron{
     height: 500px;
@@ -47,4 +44,11 @@ header{
 
 .baner{
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+}
+
+/* main sections */
+
+#new-arivals{
+    background-color: #1F1F1F;
+    color: #fff;
 }
