--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,24 @@
 
 /* utilities */
 
+body{
+    margin-top: 120px;
+    font-family: sans-serif;
+}
 
 /* to remove */
 
 [class*='col']{
     border: 1px dashed red;
-    min-height: 100px;
+    
 }
 
 [class*='row']{
     border: 1px dashed violet;
-    min-height: 100px;
+    
 }
 /* header */
 
-body{
-    margin-top: 120px;
-}
 
 header{
     height: 120px;
@@ -32,6 +33,7 @@ header{
     height: 40px;
     background-color: #000;
 }
+
 
 .header-bottom{
     height: 80px;
