--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body{
 .bg-gray{
     background-color: #D9DADC;
 }
+
+img{
+    display: block;
+}
 /* to remove */
 
 [class*='col']{
@@ -99,4 +103,9 @@ header{
 footer{
     background-color: #00439C;
     color: #fff;
+}
+
+footer a{
+    text-decoration: none;
+    color: currentColor;
 }
