--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,13 @@ header{
     color: #fff;
 }
 
+/* console and acsesories */
+.acsesory > *{
+    border-bottom: 5px solid transparent;
+    padding: 5px;
+    opacity: .5;
+}
+
 /* explore playstation */
 
 .fa-registered{
@@ -111,12 +118,26 @@ footer a{
     color: currentColor;
 }
 
-
+/* hover btn */
 .btn:hover{
     box-shadow: 0 0 1px 2px white inset;
     border: 3px solid inherit;
-    color: inherit;
+    
 }
 .btn{
     border: 3px solid transparent;
+}
+
+/* jumbo nav hover */
+.games > * > *{
+    border-radius: 20px;
+    border: 5px solid transparent;
+    padding: 5px;
+    transition: transform .5s;
+}
+.games > * > *:hover{
+    border: 5px solid #0065ca;
+    box-shadow: 10px 10px 30px black;
+    transform: translatey(-15px);
+    cursor: pointer;
 }
