--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,14 @@ header{
     opacity: .5;
 }
 
+.acsesory > *:hover, .active{
+    border-bottom: 5px solid #0065ca;
+    transform: translatey(-15px);
+    padding: 5px;
+    opacity: 1;
+    cursor: pointer;
+}
+
 /* explore playstation */
 
 .fa-registered{
