--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ header{
     opacity: .5;
 }
 
-.acsesory > *:hover, .active{
+.acsesory > *:hover{
     border-bottom: 5px solid #0065ca;
     transform: translatey(-15px);
     padding: 5px;
@@ -137,12 +137,7 @@ footer a{
 }
 
 /* jumbo nav hover */
-.games > * > *{
-    border-radius: 20px;
-    border: 5px solid transparent;
-    padding: 5px;
-    transition: transform .5s;
-}
+
 .games > * > *:hover{
     border: 5px solid #0065ca;
     box-shadow: 10px 10px 30px black;
